[DEBUG] sorting inside categories solved; css scrollbar

--- a/style.css
+++ b/style.css
@@ -36,13 +36,14 @@ h1 {
     margin: auto;
     min-width: 1020px;
     max-width: 1300px;
+    max-height: 85vh;
     display: grid;
     grid-template-rows: 6rem minmax(40rem, auto);
     grid-template-columns: 1.5fr 3fr;
     background: #fff;
     border-radius: 8px;
     box-shadow: 0 2rem 6rem 0.5rem rgba(101, 90, 86, 0.2);
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .hlavicka {
@@ -131,8 +132,8 @@ h1 {
     padding: 10px;
     background-color: #efefef;
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-    max-height: 78vh;
-    overflow-y: scroll;
+    max-height: 72vh;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -204,7 +205,7 @@ h1 {
     position: relative;
 }
 
-/*
+
 .recept-detail-obrazek::after {
     content: '';
     position: absolute;
@@ -215,7 +216,7 @@ h1 {
     top: 0;
     bottom: 0;
 }
-*/
+
 
 .recept-detail-obrazek img {
     width: 100%;
